# Chapter03

./: .gitignore  1544113611  README.md  settings.gradle
DumpPrinter/: build.gradle
DumpPrinter/src/com/dodola/alloc/dump/: AllocationInfo.java  HandleHeap.java  IStackTraceInfo.java  Main.java
alloctrack/: build.gradle
alloctrack/app/: build.gradle
alloctrack/app/src/main/: AndroidManifest.xml
alloctrack/app/src/main/cpp/: allocTracker.cpp  alloctracker.h  lock.h  native-lib.cpp  runtime.h
alloctrack/app/src/main/cpp/Substrate/: CMakeLists.txt  CydiaSubstrate.h
alloctrack/app/src/main/java/com/dodola/alloctrack/: AllocTracker.java  MainActivity.java
alloctrack/app/src/main/res/layout/: activity_main.xml
alloctrack/app/src/test/java/com/dodola/alloctrack/: ExampleUnitTest.java
alloctrack/gradle/wrapper/: gradle-wrapper.properties
alloctrackSample/: build.gradle
alloctrackSample/src/androidTest/java/com/dodola/alloctrack/: ExampleInstrumentedTest.java
alloctrackSample/src/main/: AndroidManifest.xml
alloctrackSample/src/main/cpp/: CMakeLists.txt  allocTracker.cpp  alloctracker.h  dlopen.c  lock.cpp  logger.h  native-lib.cpp
alloctrackSample/src/main/cpp/HookZz/: CMakeLists.txt
alloctrackSample/src/main/cpp/Substrate/: SubstrateARM.hpp  SubstrateHook.cpp
alloctrackSample/src/main/cpp/fb/: CMakeLists.txt
alloctrackSample/src/main/java/com/dodola/alloctrack/: MainActivity.java
alloctrackSample/src/main/res/layout/: activity_main.xml
alloctrackSample/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
